phpmyadmin-strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: phpmyadmin-strip
  namespace: ostara
spec:
  stripPrefix:
    prefixes:
      - /phpmyadmin
