ostara-api-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostara-api-admin
  namespace: ostara
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostara-api-admin
  template:
    metadata:
      labels:
        app: ostara-api-admin
    spec:
      containers:
        - name: ostara-api-admin
          image: schtromar/ostara-admin-api:1.0.0
          ports:
            - containerPort: 8080
