ostara-api-kiosk-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ostara-api-kiosk
  namespace: ostara
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ostara-api-kiosk
  template:
    metadata:
      labels:
        app: ostara-api-kiosk
    spec:
      containers:
        - name: ostara-api-kiosk
          image: schtromar/ostara-kiosk-api:1.0.1
          ports:
            - containerPort: 8080
