ostara-admin-panel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostara-admin-panel
  namespace: ostara
spec:
  selector:
    app: ostara-admin-panel
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
