ostara-api-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostara-api-admin
  namespace: ostara
spec:
  selector:
    app: ostara-api-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
