ostara-qr-generator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostara-qr-generator
  namespace: ostara
spec:
  selector:
    app: ostara-qr-generator
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
