ostara-web-kiosk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostara-web-kiosk
  namespace: ostara
spec:
  selector:
    app: ostara-web-kiosk
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
