keycloak-basic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: ostara
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.5.0
        args:
          - start-dev
          - --http-relative-path=/keycloak
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ostara
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: ostara
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: ostara-keycloak-cors@kubernetescrd
spec:
  rules:
  - host: ostara-rso.031268394.xyz
    http:
      paths:
      - path: /keycloak
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-cors
  namespace: ostara
spec:
  headers:
    accessControlAllowOriginList:
      - http://localhost:5173
      - https://localhost:5173
    accessControlAllowCredentials: true
    accessControlAllowMethods:
      - GET
      - POST
      - OPTIONS
    accessControlAllowHeaders:
      - Authorization
      - Content-Type
